# Bounding-box-object-detection

./: .gitignore  README.md  REZULTATI.md  pyproject.toml
dataset/: podesavanja.yaml
models/: ssd_mobilenet.py
src/: evaluiraj.py  podeli_dataset.py  treniraj_yolov8n.py  treniraj_yolov8n_balansirano.py  treniraj_yolov8s.py
